run all cells in first two notebooks

--- a/notebooks/data_processing/shots_to_points.ipynb
+++ b/notebooks/data_processing/shots_to_points.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "8596566a",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "9e047ee6",
    "metadata": {},
    "outputs": [
@@ -170,7 +170,7 @@
        "16           Serve             0.00"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "36339d18",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "46b206f9",
    "metadata": {},
    "outputs": [],
@@ -275,10 +275,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "c2082336",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jacks\\AppData\\Local\\Temp\\ipykernel_29092\\1867894411.py:17: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  rally_df[['forehand_ratio', 'backhand_ratio']] = rally_df[['forehand_ratio', 'backhand_ratio']].fillna(0)\n"
+     ]
+    }
+   ],
    "source": [
     "# Shot-type ratios per point\n",
     "hand_counts = (\n",
@@ -289,12 +298,19 @@
     ")\n",
     "\n",
     "rally_df = rally_df.merge(hand_counts, on=['Date','Tournament','Player1','Player2','Point'], how='left')\n",
-    "rally_df['forehand_ratio'] = rally_df['forehand'] / (rally_df[['forehand','backhand']].sum(axis=1))\n"
+    "\n",
+    "# Avoid divide-by-zero issues\n",
+    "total_shots = rally_df[['forehand', 'backhand']].sum(axis=1)\n",
+    "rally_df['forehand_ratio'] = rally_df['forehand'] / total_shots.replace(0, pd.NA)\n",
+    "rally_df['backhand_ratio'] = rally_df['backhand'] / total_shots.replace(0, pd.NA)\n",
+    "\n",
+    "# Fill any missing ratios (e.g., rare cases where total_shots = 0)\n",
+    "rally_df[['forehand_ratio', 'backhand_ratio']] = rally_df[['forehand_ratio', 'backhand_ratio']].fillna(0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "ce24afde",
    "metadata": {},
    "outputs": [
@@ -431,7 +447,7 @@
        "9  Nicola_Pietrangeli          Luis_Ayala       False          6"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "bd689005",
    "metadata": {},
    "outputs": [
@@ -485,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "62ffcad7",
    "metadata": {},
    "outputs": [
